--- a/app/src/main/res/layout/fragment_negro.xml
+++ b/app/src/main/res/layout/fragment_negro.xml
@@ -29,7 +29,7 @@
             android:id="@+id/descriptionTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Thread Exchange es más que una aplicación; es un portal dinámico hacia el mundo de la moda. Con un enfoque en la ropa y accesorios, nuestra plataforma ofrece a los entusiastas de la moda una experiencia única de intercambio, descubrimiento y estilo."
+            android:text="@string/thread_exchange_es_m_s_que_una_aplicaci_n_es_un_portal_din_mico_hacia_el_mundo_de_la_moda_con_un_enfoque_en_la_ropa_y_accesorios_nuestra_plataforma_ofrece_a_los_entusiastas_de_la_moda_una_experiencia_nica_de_intercambio_descubrimiento_y_estilo"
             android:textSize="16sp"/>
 
         <!-- Botón de menú -->
