--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -34,7 +34,7 @@
         android:id="@+id/tvEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Correo Electrónico: alexmm1998@gmail.com"
+        android:text="@string/correo_electr_nico_alexmm1998_gmail_com"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/tvUserName"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,7 @@
         android:id="@+id/tvAge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Edad: 26 años"
+        android:text="@string/edad_26_a_os"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/tvEmail"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
         android:id="@+id/tvLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ubicación: Huelva, España"
+        android:text="@string/ubicaci_n_huelva_espa_a"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/tvAge"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +81,7 @@
         style="@style/AppButtonStyle"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="Ir a Favoritos"
+        android:text="@string/ir_a_favoritos"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/imageViewSample"
