--- a/app/src/main/res/drawable/baseline_videogame_asset_24.xml
+++ b/app/src/main/res/drawable/baseline_videogame_asset_24.xml
@@ -1,5 +1,29 @@
 <vector android:height="24dp" android:tint="#000000"
     android:viewportHeight="24" android:viewportWidth="24"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M21,6L3,6c-1.1,0 -2,0.9 -2,2v8c0,1.1 0.9,2 2,2h18c1.1,0 2,-0.9 2,-2L23,8c0,-1.1 -0.9,-2 -2,-2zM11,13L8,13v3L6,16v-3L3,13v-2h3L6,8h2v3h3v2zM15.5,15c-0.83,0 -1.5,-0.67 -1.5,-1.5s0.67,-1.5 1.5,-1.5 1.5,0.67 1.5,1.5 -0.67,1.5 -1.5,1.5zM19.5,12c-0.83,0 -1.5,-0.67 -1.5,-1.5S18.67,9 19.5,9s1.5,0.67 1.5,1.5 -0.67,1.5 -1.5,1.5z"/>
+
+    <!-- Dibuja el primer punto -->
+    <path android:fillColor="@android:color/white"
+        android:pathData="M4,7a1,1 0 1,1 0,2 1,1 0 0,1 0,-2" />
+
+    <!-- Dibuja la primera línea -->
+    <path android:fillColor="@android:color/white"
+        android:pathData="M8,8h12v1H8z" />
+
+    <!-- Dibuja el segundo punto -->
+    <path android:fillColor="@android:color/white"
+        android:pathData="M4,12a1,1 0 1,1 0,2 1,1 0 0,1 0,-2" />
+
+    <!-- Dibuja la segunda línea -->
+    <path android:fillColor="@android:color/white"
+        android:pathData="M8,13h12v1H8z" />
+
+    <!-- Dibuja el tercer punto -->
+    <path android:fillColor="@android:color/white"
+        android:pathData="M4,17a1,1 0 1,1 0,2 1,1 0 0,1 0,-2" />
+
+    <!-- Dibuja la tercera línea -->
+    <path android:fillColor="@android:color/white"
+        android:pathData="M8,18h12v1H8z" />
+
 </vector>
